--- a/clippy.toml
+++ b/clippy.toml
@@ -4,6 +4,7 @@ allowed-duplicate-crates = [
     "idna",
     "regex-automata",
     "regex-syntax",
+    "wasi",
     "windows-sys",
     "windows-targets",
     "windows_aarch64_gnullvm",
