--- a/clippy.toml
+++ b/clippy.toml
@@ -1,17 +1,7 @@
 allowed-duplicate-crates = [
-    "bitflags",
-    "heck",
-    "idna",
+    "getrandom",
     "regex-automata",
     "regex-syntax",
     "wasi",
     "windows-sys",
-    "windows-targets",
-    "windows_aarch64_gnullvm",
-    "windows_aarch64_msvc",
-    "windows_i686_gnu",
-    "windows_i686_msvc",
-    "windows_x86_64_gnu",
-    "windows_x86_64_gnullvm",
-    "windows_x86_64_msvc",
 ]
