--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,14 @@ uninlined-format-args = { level = "allow", priority = 127 }
 let_underscore_drop = { level = "deny", priority = 127 }
 non_ascii_idents = { level = "deny", priority = 127 }
 
+[features]
+default = ["tokio-console"]
+tokio-console = ["dep:console-subscriber", "dep:tokio-console"]
+
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
 color-eyre = "0.6.3"
+console-subscriber = { version = "0.4.1", optional = true }
 hickory-server = "0.25.1"
 http = "1.3.1"
 http-body-util = "0.1.3"
@@ -70,6 +75,7 @@ tokio = { version = "1.44.2", features = [
     "signal",
     "net",
 ] }
+tokio-console = { version = "0.1.13", optional = true }
 tokio-util = { version = "0.7.15", features = ["rt"] }
 
 # OpenSSL for musl
