feat: remove support for records and network blacklists
BREAKING CHANGE: --record is no longer supported. Network blacklist was never exposed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "kind": "bin"
                 }
             },
-            "args": ["--record", "foo:1.1.1.1", "--record", "bar:2.2.2.2"],
+            "args": [],
             "cwd": "${workspaceFolder}",
             "env": {
                 "RUST_BACKTRACE": "1",
