--- a/clippy.toml
+++ b/clippy.toml
@@ -1,1 +1,8 @@
-absolute-paths-allowed-crates = ["std"]
+absolute-paths-allowed-crates = [
+    "color_eyre",
+    "hyper",
+    "hickory_server",
+    "std",
+    "tracing_subscriber",
+    "tokio",
+]
