fix: test titles

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -414,7 +414,7 @@ jobs:
       - name: Upload test results
         uses: EnricoMi/publish-unit-test-result-action@3a74b2957438d0b6e2e61d67b05318aa25c9e6c6 # v2.20.0
         with:
-          check_name: Test results
+          check_name: Test results Linux
           github_token: ${{ secrets.GITHUB_TOKEN }}
           files: |
             reports/results.xml
@@ -565,7 +565,7 @@ jobs:
       - name: Upload test results
         uses: EnricoMi/publish-unit-test-result-action/windows@3a74b2957438d0b6e2e61d67b05318aa25c9e6c6 # v2.20.0
         with:
-          check_name: Test results
+          check_name: Test results Windows
           github_token: ${{ secrets.GITHUB_TOKEN }}
           files: |
             reports/results.xml
