--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -119,6 +119,50 @@ jobs:
         run: |
           cargo build ${{ env.CARGO_FEATURES }} --all-targets --locked --workspace --verbose
 
+  cargo-build-windows:
+    name: Cargo build Windows
+    runs-on: windows-latest
+    needs:
+      - changes
+    if: |
+      github.event_name == 'pull_request' &&
+      fromJSON(needs.changes.outputs.rust) == true
+    steps:
+      - &disable_autocrlf
+        name: Disable autocrlf
+        shell: pwsh
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
+      - *checkout
+
+      - *cache_cargo
+
+      - *cache_target
+
+      - *set_up_mold
+
+      - &set_up_toolchain_windows
+        name: Set up toolchain
+        shell: pwsh
+        run: |
+          Remove-Item -ErrorAction SilentlyContinue ${HOME}/.cargo/bin/cargo-fmt.exe
+          Remove-Item -ErrorAction SilentlyContinue ${HOME}/.cargo/bin/rust-analyzer.exe
+          Remove-Item -ErrorAction SilentlyContinue ${HOME}/.cargo/bin/rustfmt.exe
+
+          rustup self update
+          rustup update
+          rustup show active-toolchain || rustup toolchain install
+          rustup show
+
+          cargo --version
+
+      - name: Build
+        shell: pwsh
+        run: |
+          cargo build --all-features --all-targets --locked --workspace --verbose
+
   cargo-fmt:
     name: Cargo fmt
     runs-on: ubuntu-latest
@@ -228,7 +272,7 @@ jobs:
           disable_search: true
           disable_telem: true
           fail_ci_if_error: true
-          flags: ${{ github.job }}
+          flags: ${{ github.job }}-linux
           files: reports/lcov.info
           plugins: ""
           report_type: "coverage"
@@ -240,7 +284,7 @@ jobs:
           disable_search: true
           disable_telem: true
           fail_ci_if_error: true
-          flags: ${{ github.job }}
+          flags: ${{ github.job }}-linux
           files: reports/results.xml
           plugins: ""
           report_type: "test_results"
@@ -248,6 +292,117 @@ jobs:
 
       - name: Fail if tests failed
         shell: bash
+        if: |
+          steps.tests.outcome != 'success'
+        run: |
+          # the test reporter we use (or any for that matter)
+          # all show a report. But we cannot depend on that report because
+          # we don't know which subsection it belongs in GitHub
+          # so we explicitly fail this one
+          # which will fail All Done
+          exit 1
+
+  cargo-test-and-report-windows:
+    name: Cargo test (and report) Windows
+    runs-on: windows-latest
+    permissions:
+      checks: write
+      id-token: write
+      pull-requests: write
+    steps:
+      - *disable_autocrlf
+
+      - *checkout
+
+      - *cache_cargo
+
+      - *cache_target
+
+      - *set_up_mold
+
+      - *set_up_toolchain_windows
+
+      - name: Install llvm-tools
+        shell: pwsh
+        run: |
+          rustup component add llvm-tools
+
+          # restore symlinks
+          rustup update
+
+      - name: Install nextest, custom test runner, with native support for junit and grcov
+        uses: taiki-e/install-action@f176c07a0a40cbfdd08ee9aa8bf1655701d11e69 # v2.67.25
+        with:
+          tool: cargo-nextest, grcov
+
+      - name: Build with instrumentation support
+        shell: pwsh
+        env:
+          RUSTFLAGS: "${{ env.RUSTFLAGS }} --allow=warnings -Cinstrument-coverage"
+          # build-* ones are not parsed by grcov
+          LLVM_PROFILE_FILE: "profiling/build-%p-%m.profraw"
+        run: |
+          cargo build --all-features --all-targets --locked --workspace --verbose
+
+      - name: Run nextest
+        shell: pwsh
+        id: tests
+        env:
+          RUSTFLAGS: "${{ env.RUSTFLAGS }} --allow=warnings -Cinstrument-coverage"
+          LLVM_PROFILE_FILE: "profiling/profile-%p-%m.profraw"
+        run: |
+          cargo nextest run --profile ci --no-fail-fast --all-targets --all-features --workspace
+        continue-on-error: true
+
+      - name: Upload test results
+        uses: EnricoMi/publish-unit-test-result-action/windows@27d65e188ec43221b20d26de30f4892fad91df2f # v2.22.0
+        with:
+          check_name: Test results Windows
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            reports/results.xml
+
+      - name: Run grcov
+        shell: pwsh
+        run: |
+          grcov $(Get-ChildItem -Recurse -Filter '*.profraw' -Path . | % { $_.FullName }) `
+            --binary-path ./target/debug/ `
+            --branch `
+            --ignore-not-existing `
+            --keep-only "crates/**/src/**" `
+            --llvm `
+            --output-path ./reports/lcov.info `
+            --output-type lcov `
+            --source-dir .
+
+      - name: Upload coverage results (to Codecov.io)
+        uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
+        with:
+          disable_search: true
+          disable_telem: true
+          fail_ci_if_error: true
+          flags: windows
+          files: reports/lcov.info
+          name: ${{ github.job }}-windows
+          plugins: ""
+          report_type: "coverage"
+          use_oidc: true
+
+      - name: Upload test results (to Codecov.io)
+        uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
+        with:
+          disable_search: true
+          disable_telem: true
+          fail_ci_if_error: true
+          flags: windows
+          files: reports/results.xml
+          name: ${{ github.job }}-windows
+          plugins: ""
+          report_type: "test_results"
+          use_oidc: true
+
+      - name: Fail if tests failed
+        shell: pwsh
         if: |
           steps.tests.outcome != 'success'
         run: |
@@ -283,6 +438,32 @@ jobs:
         with:
           args: ${{ env.CARGO_FEATURES }} --all-targets --locked --workspace --verbose
 
+  cargo-clippy-and-report-windows:
+    name: Cargo clippy (and report) Windows
+    runs-on: windows-latest
+    needs:
+      - changes
+    if: |
+      github.event_name == 'pull_request' &&
+      fromJSON(needs.changes.outputs.rust) == true
+    steps:
+      - *disable_autocrlf
+
+      - *checkout
+
+      - *cache_cargo
+
+      - *cache_target
+
+      - *set_up_mold
+
+      - *set_up_toolchain_windows
+
+      - name: Run Clippy for GitHub Actions report
+        uses: actions-rs-plus/clippy-check@a25517dc6178320cb29e6e5e4d4db30348df6f3f # v2.4.2
+        with:
+          args: --all-features --all-targets --locked --workspace --verbose
+
   all-done:
     name: Rust All done
     # this is the job that should be marked as required on GitHub. It's the only one that'll reliably trigger
@@ -293,9 +474,12 @@ jobs:
     runs-on: ubuntu-slim
     needs:
       - cargo-build
+      - cargo-build-windows
       - cargo-clippy-and-report
+      - cargo-clippy-and-report-windows
       - cargo-fmt
       - cargo-test-and-report
+      - cargo-test-and-report-windows
     if: |
       always()
     steps:
