chore: bump packages

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -292,13 +292,7 @@ jobs:
           disable_telem: true
           env_vars: OS,RUST
           fail_ci_if_error: true
-<<<<<<< HEAD
-          flags: ${{ github.job }}-linux
-||||||| 63df4a01
-          flags: ${{ github.job }}
-=======
-          # flags: tests
->>>>>>> upstream/main
+          flags: linux
           files: reports/lcov.info
           name: code-coverage
           plugins: ""
@@ -312,13 +306,7 @@ jobs:
           disable_telem: true
           env_vars: OS,RUST
           fail_ci_if_error: true
-<<<<<<< HEAD
-          flags: ${{ github.job }}-linux
-||||||| 63df4a01
-          flags: ${{ github.job }}
-=======
-          # flags: tests
->>>>>>> upstream/main
+          flags: linux
           files: reports/results.xml
           name: test-results
           plugins: ""
@@ -410,15 +398,23 @@ jobs:
             --output-type lcov `
             --source-dir .
 
+      - name: Record Rust version
+        shell: bash
+        run: |
+          $version=(rustc --version)
+
+          Add-Content -Path "$env:GITHUB_ENV" -Value "RUST=$version"
+
       - name: Upload coverage results (to Codecov.io)
         uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
         with:
           disable_search: true
           disable_telem: true
+          env_vars: OS,RUST
           fail_ci_if_error: true
           flags: windows
           files: reports/lcov.info
-          name: ${{ github.job }}-windows
+          name: code-coverage
           plugins: ""
           report_type: "coverage"
           use_oidc: true
@@ -428,10 +424,11 @@ jobs:
         with:
           disable_search: true
           disable_telem: true
+          env_vars: OS,RUST
           fail_ci_if_error: true
           flags: windows
           files: reports/results.xml
-          name: ${{ github.job }}-windows
+          name: test-results
           plugins: ""
           report_type: "test_results"
           use_oidc: true
